# ride-cli

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: publish.yml  tests.yml
about/: index.html
api/automl/: index.html
api/cli/: index.html
api/utils/: index.html
changelog/: index.html
contributing/development/: index.html
contributing/release/: index.html
contributing/testing/: index.html
docs/: about.md  changelog.md  index.md
docs/api/: automl.md  cli.md  utils.md
docs/contributing/: development.md  release.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: interface.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
ride/: __init__.py  automl_processor.py  cli.py  utils.py
search/: search_index.json
tests/: __init__.py  test_automl.py  test_basic.py  test_cli.py  test_utils.py
user-guide/interface/: index.html
